Implement unit test for search animals